# flight-price-comparator

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
src/: __init__.py  config.py  currency.py  main.py  output.py
src/providers/: __init__.py  amadeus.py  base.py  kiwi.py  serpapi_flights.py  skyscanner.py  skyscanner_scraper.py  travelpayouts.py
tests/: test_amadeus_parser.py  test_currency.py  test_kiwi_parser.py  test_output.py  test_serpapi_parser.py  test_skyscanner_parser.py  test_skyscanner_scraper_parser.py  test_travelpayouts_parser.py
