[project]
name = "flight-price-comparator"
version = "0.1.0"
description = "Compare flight prices across countries of purchase (point-of-sale arbitrage)."
requires-python = ">=3.9"

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["results", "venv", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "N"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q"
